Accept all product type

--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>CrackDetect AI - Window Crack Detection System</title>
+    <title>Defect Detective - AI Product Defect Detection</title>
     <meta
       name="description"
-      content="Advanced AI-powered window crack detection with bounding boxes and professional PDF reports"
+      content="AI-powered inspection for windows, doors, frames, sliding systems, and glass panels with visual defect markers and professional reports."
     />
   </head>
   <body>
